--- a/no_style.html
+++ b/no_style.html
@@ -29,17 +29,20 @@
             <div>
                 <h1>Same Page Different Stylesheets</h1>
                 This is a demonstration of how different stylesheets can change the layout of your HTML page. You can change the layout of this page by selecting different stylesheets in the menu, or by selecting one of the following links:
-                <p>Stylesheet1, Stylesheet2, Stylesheet3, Stylesheet4.</p>
+                <br>
+                <a href = "">Stylesheet1</a>, <a href = "">Stylesheet2</a>, <a href = "">Stylesheet3</a>, <a href = "">Stylesheet4</a>.
 
                 <h2>No Styles</h2>
                 This page uses DIV elements to group different sections of the HTML page. Click here to see how the page looks like with no stylesheet:
-                No Stylesheet.
+                <br>
+                <a href = "">No Stylesheet.</a>
             </div>
             <div>
                 <h3>Side-Bar</h3>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
             </div>
         </div>
+        <br>
         <div>
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
         </div>
